--- a/package.json
+++ b/package.json
@@ -4,53 +4,37 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "db:generate": "drizzle-kit generate",
-    "db:push": "drizzle-kit push",
-    "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:generate": "npx drizzle-kit generate",
+    "db:push": "npx drizzle-kit push",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.3",
-    "@radix-ui/react-visually-hidden": "^1.1.0",
-    "@vercel/blob": "^0.24.1",
-    "@vercel/postgres": "^0.10.0",
-    "lucide-react": "^0.482.0",
-    "ai": "4.1.61",
-    "bcrypt-ts": "^5.0.0",
+    "@radix-ui/react-slot": "^1.2.0",
+    "bcrypt-ts": "^6.0.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "class-variance-authority": "0.7.1",
-    "drizzle-orm": "^0.40.1",
-    "geist": "^1.2.0",
-    "next": "^15.2.2",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.42.0",
+    "geist": "^1.2.0",
+    "lucide-react": "^0.503.0",
+    "next": "^15.3.1",
     "next-auth": "5.0.0-beta.4",
-    "postgres": "^3.4.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.2",
-    "zod": "^3.24.2",
-    "sonner": "^2.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "postgres": "^3.4.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
-    "@types/react": "^19.0.11",
-    "@types/react-dom": "^19.0.4",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "autoprefixer": "^10.4.16",
-    "drizzle-kit": "^0.30.5",
+    "drizzle-kit": "^0.31.0",
     "eslint": "8.56.0",
-    "eslint-config-next": "^14.0.4",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "4.0.14",
+    "eslint-config-next": "^15.3.1",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.2.8",
     "typescript": "^5.3.3"
   }
 }
